--- a/src/app/pages/characters/characters.html
+++ b/src/app/pages/characters/characters.html
@@ -1,36 +1,2 @@
-<section class="relative bg-[#14141F] text-white py-20 px-6 overflow-hidden">
-  <!-- Imagen de Rick decorativa -->
-  <img
-    src="assets/img/rick.png"
-    alt="Rick"
-    class="absolute bottom-0 right-0 max-w-none h-70 object-contain z-0 pointer-events-none select-none"
-  />
-
-  <!-- Card centrada -->
-  <div
-    class="relative z-10 max-w-4xl mx-auto text-center text-white p-10 rounded-xl shadow-lg bg-opacity-95"
-  >
-    <h1 class="text-4xl font-extrabold leading-tight mb-4">
-      Encuentra a tu personaje favorito
-    </h1>
-    <p class="text-lg text-white mb-6">
-      Explora el multiverso y conoce a Rick, Morty, Meeseeks y cientos más.
-      ¡Busca por nombre o dimensión!
-    </p>
-
-    <!-- Barra de búsqueda -->
-    <div
-      class="bg-white rounded-xl overflow-hidden flex shadow-md border border-gray-300"
-    >
-      <input
-        type="text"
-        placeholder="Ej. Rick, Summer, Birdperson..."
-        class="flex-1 px-4 py-3 text-gray-800 focus:outline-none"
-      />
-      <button class="bg-pink-600 hover:bg-pink-700 text-white px-6">
-        Buscar
-      </button>
-    </div>
-  </div>
-</section>
+<app-hero></app-hero>
 <app-main-characters></app-main-characters>
