--- a/src/app/pages/characters/characters.html
+++ b/src/app/pages/characters/characters.html
@@ -27,15 +27,17 @@
         "
       >
         <div
-          class="relative bg-white rounded-xl shadow-md flex overflow-hidden min-h-[180px] transition-all duration-300"
+          class="group relative bg-white rounded-xl shadow-md flex overflow-hidden min-h-[180px] transition-transform duration-300 ease-in-out cursor-pointer hover:-translate-y-2 hover:shadow-lg"
+          (click)="abrirModal(personaje)"
         >
           <img
             [src]="personaje.image"
             alt="{{ personaje.name }}"
-            class="w-40 h-auto object-cover shrink-0"
+            class="w-40 h-auto object-cover shrink-0 rounded-l-xl transition-all duration-300 group-hover:scale-110"
             (load)="onImageLoad(i)"
             [class.hidden]="!imageLoaded[i]"
           />
+
           <div
             class="p-4 text-gray-800 flex-1"
             [class.hidden]="!imageLoaded[i]"
@@ -91,3 +93,9 @@
     </button>
   </div>
 </section>
+
+<app-modal-info
+  *ngIf="personajeSeleccionado"
+  [personaje]="personajeSeleccionado"
+  (cerrar)="cerrarModal()"
+></app-modal-info>
