--- a/src/app/pages/episodes/hero/hero.html
+++ b/src/app/pages/episodes/hero/hero.html
@@ -1,8 +1,8 @@
 <section class="relative bg-[#14141F] text-white py-20 px-6 overflow-visible">
   <img
-    src="assets/img/rick.png"
+    src="assets/img/episodes-hero.png"
     alt="Rick"
-    class="absolute bottom-0 right-0 max-w-none h-70 object-contain z-0 pointer-events-none select-none"
+    class="absolute bottom-0 right-0 max-w-none h-50 object-contain z-0 pointer-events-none select-none"
   />
 
   <div class="relative z-10 max-w-4xl mx-auto text-center">
@@ -19,11 +19,9 @@
         class="flex flex-row flex-wrap items-center gap-4 max-w-2xl w-full mx-auto mb-4"
       >
         <form
-          (ngSubmit)="buscar()"
           class="flex flex-1 bg-white rounded-xl overflow-hidden shadow-md border border-gray-300"
         >
           <input
-            [(ngModel)]="searchTerm"
             name="search"
             type="text"
             placeholder="Ej. Rick, Summer..."
@@ -57,7 +55,6 @@
             <label class="block text-sm font-medium mb-1">Estatus</label>
             <select
               class="w-full border border-gray-300 rounded-md px-3 py-2"
-              [(ngModel)]="status"
               name="status"
             >
               <option value="">Todos</option>
@@ -70,7 +67,6 @@
             <label class="block text-sm font-medium mb-1">Especie</label>
             <select
               class="w-full border border-gray-300 rounded-md px-3 py-2"
-              [(ngModel)]="species"
               name="species"
             >
               <option value="">Todos</option>
@@ -84,7 +80,6 @@
             <label class="block text-sm font-medium mb-1">Género</label>
             <select
               class="w-full border border-gray-300 rounded-md px-3 py-2"
-              [(ngModel)]="gender"
               name="gender"
             >
               <option value="">Todos</option>
@@ -99,7 +94,6 @@
         <div class="flex flex-col sm:flex-row justify-center gap-4 mt-6">
           <button
             class="flex items-center justify-center gap-2 bg-pink-600 hover:bg-pink-700 text-white font-semibold px-6 py-2 rounded-xl shadow-md transition-all duration-300 w-full sm:flex-grow"
-            (click)="aplicarFiltros()"
           >
             <i class="fas fa-check"></i> Aplicar
           </button>
