--- a/src/app/pages/episodes/hero/hero.html
+++ b/src/app/pages/episodes/hero/hero.html
@@ -7,11 +7,11 @@
 
   <div class="relative z-10 max-w-4xl mx-auto text-center">
     <h1 class="text-4xl font-extrabold leading-tight mb-4">
-      Encuentra a tu personaje favorito
+      Explora todos los episodios de Rick and Morty
     </h1>
     <p class="text-lg text-gray-300 mb-6">
-      Explora el multiverso y conoce a Rick, Morty, Meeseeks y cientos más.
-      ¡Busca por nombre o dimensión!
+      Descubre en qué capítulo aparecen tus personajes favoritos y revive los
+      mejores momentos del multiverso.
     </p>
 
     <div class="relative inline-block max-w-2xl w-full mx-auto text-left">
@@ -19,12 +19,14 @@
         class="flex flex-row flex-wrap items-center gap-4 max-w-2xl w-full mx-auto mb-4"
       >
         <form
+          (submit)="buscarEpisodio()"
           class="flex flex-1 bg-white rounded-xl overflow-hidden shadow-md border border-gray-300"
         >
           <input
+            [(ngModel)]="searchTerm"
             name="search"
             type="text"
-            placeholder="Ej. Rick, Summer..."
+            placeholder="Ej. Pilot, Ricksy Business..."
             class="flex-1 px-4 py-3 text-gray-800 focus:outline-none"
           />
           <button
@@ -34,77 +36,6 @@
             <i class="fas fa-search"></i>
           </button>
         </form>
-
-        <button
-          id="toggleFiltrosBtn"
-          class="cursor-pointer bg-white hover:bg-gray-100 text-gray-700 border border-gray-300 px-6 py-3 rounded-xl shadow-md"
-          onclick="document.getElementById('filtrosCard').classList.toggle('hidden')"
-        >
-          <i class="fas fa-sliders-h"></i>
-        </button>
-      </div>
-
-      <!-- Dropdown tipo card de filtros -->
-      <div
-        id="filtrosCard"
-        class="hidden absolute right-0 mt-2 w-full bg-white text-black text-left p-6 rounded-xl shadow-2xl z-20"
-      >
-        <h3 class="text-xl font-bold mb-4">Filtros</h3>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
-          <div>
-            <label class="block text-sm font-medium mb-1">Estatus</label>
-            <select
-              class="w-full border border-gray-300 rounded-md px-3 py-2"
-              name="status"
-            >
-              <option value="">Todos</option>
-              <option value="alive">Vivo</option>
-              <option value="dead">Muerto</option>
-              <option value="unknown">Desconocido</option>
-            </select>
-          </div>
-          <div>
-            <label class="block text-sm font-medium mb-1">Especie</label>
-            <select
-              class="w-full border border-gray-300 rounded-md px-3 py-2"
-              name="species"
-            >
-              <option value="">Todos</option>
-              <option value="Human">Humano</option>
-              <option value="Alien">Alien</option>
-              <option value="Robot">Robot</option>
-              <option value="Humanoid">Humanoide</option>
-            </select>
-          </div>
-          <div class="md:col-span-2">
-            <label class="block text-sm font-medium mb-1">Género</label>
-            <select
-              class="w-full border border-gray-300 rounded-md px-3 py-2"
-              name="gender"
-            >
-              <option value="">Todos</option>
-              <option value="male">Hombre</option>
-              <option value="female">Mujer</option>
-              <option value="genderless">Sin género</option>
-              <option value="unknown">Desconocido</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="flex flex-col sm:flex-row justify-center gap-4 mt-6">
-          <button
-            class="flex items-center justify-center gap-2 bg-pink-600 hover:bg-pink-700 text-white font-semibold px-6 py-2 rounded-xl shadow-md transition-all duration-300 w-full sm:flex-grow"
-          >
-            <i class="fas fa-check"></i> Aplicar
-          </button>
-
-          <button
-            class="flex items-center justify-center gap-2 bg-gray-300 hover:bg-gray-400 text-gray-800 font-semibold px-6 py-2 rounded-xl shadow-md transition-all duration-300 w-full sm:w-auto"
-            onclick="document.getElementById('filtrosCard').classList.add('hidden')"
-          >
-            <i class="fas fa-times"></i> Cancelar
-          </button>
-        </div>
       </div>
     </div>
   </div>
