--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -75,9 +75,8 @@
       >
         <a
           class="font-medium text-blue-400 hover:text-gray-400 focus:outline-hidden focus:text-blue-400 text-lg"
-          routerLink="/"
+          routerLink="/home"
           routerLinkActive="text-blue-400"
-          [routerLinkActiveOptions]="{ exact: true }"
         >
           Inicio
         </a>
