--- a/src/app/pages/home/portada/portada.html
+++ b/src/app/pages/home/portada/portada.html
@@ -1,4 +1,3 @@
-<!-- Hero Carousel Section -->
 <section
   data-hs-carousel='{
     "loadingClasses": "opacity-0",
@@ -8,26 +7,22 @@
   }'
   class="relative h-[90vh] overflow-hidden"
 >
-  <!-- Carousel container -->
   <div class="hs-carousel relative w-full h-full">
     <div
       class="hs-carousel-body absolute inset-0 flex transition-transform duration-700 opacity-0"
     >
-      <!-- Slide 1 -->
       <div class="hs-carousel-slide h-full w-full">
         <div
           class="h-full w-full bg-cover bg-center"
           style="background-image: url('assets/img/rickandmorty.jpg')"
         ></div>
       </div>
-      <!-- Slide 2 -->
       <div class="hs-carousel-slide h-full w-full">
         <div
           class="h-full w-full bg-cover bg-center"
           style="background-image: url('assets/img/slider2.jpg')"
         ></div>
       </div>
-      <!-- Slide 3 -->
       <div class="hs-carousel-slide h-full w-full">
         <div
           class="h-full w-full bg-cover bg-center"
@@ -36,12 +31,11 @@
       </div>
     </div>
 
-    <!-- Overlay negro -->
     <div class="absolute inset-0 bg-black/60 z-10"></div>
 
-    <!-- Contenido centrado -->
     <div
       class="absolute inset-0 flex items-center justify-center z-20 text-white px-4 text-center"
+      data-aos="zoom-in"
     >
       <div class="max-w-3xl">
         <p class="uppercase tracking-wider text-sm text-gray-200">
@@ -63,7 +57,6 @@
       </div>
     </div>
 
-    <!-- Paginación -->
     <div
       class="hs-carousel-pagination flex justify-center absolute bottom-5 inset-x-0 z-20 gap-x-2"
     ></div>
