--- a/src/app/pages/home/phrases/phrases.html
+++ b/src/app/pages/home/phrases/phrases.html
@@ -1,8 +1,11 @@
 <section class="bg-[#EFF2FB] py-16 px-6">
   <div class="max-w-6xl mx-auto text-center">
-    <h2 class="text-3xl font-bold text-gray-900 mb-12">Frases icónicas</h2>
+    <h2 class="text-3xl font-bold text-gray-900 mb-12" data-aos="fade-down">
+      Frases icónicas
+    </h2>
     <div class="grid md:grid-cols-3 gap-6 text-left">
       <div
+        data-aos="fade-down"
         *ngFor="let frase of frases"
         class="bg-white p-6 rounded-xl shadow-md hover:-translate-y-1 hover:scale-110 transition duration-500 ease-in-out flex flex-col justify-between"
       >
