--- a/src/app/pages/home/statistics/statistics.html
+++ b/src/app/pages/home/statistics/statistics.html
@@ -1,25 +1,34 @@
 <section class="py-12 bg-white dark:bg-[#14141F] text-center">
-  <h2 class="text-3xl font-bold text-gray-900 dark:text-white mb-6">
+  <h2
+    class="text-3xl font-bold text-gray-900 dark:text-white mb-6"
+    data-aos="fade-down"
+  >
     Estadísticas del multiverso
   </h2>
   <div class="grid grid-cols-1 sm:grid-cols-3 gap-8 max-w-4xl mx-auto">
     <div>
-      <p class="text-5xl font-bold text-violet-600">
+      <p class="text-5xl font-bold text-violet-600" data-aos="fade-down">
         {{ stats.personajes }}
       </p>
-      <p class="mt-2 text-gray-700 dark:text-gray-300">Personajes</p>
+      <p class="mt-2 text-gray-700 dark:text-gray-300" data-aos="fade-down">
+        Personajes
+      </p>
     </div>
     <div>
-      <p class="text-5xl font-bold text-violet-600">
+      <p class="text-5xl font-bold text-violet-600" data-aos="fade-down">
         {{ stats.episodios }}
       </p>
-      <p class="mt-2 text-gray-700 dark:text-gray-300">Episodios</p>
+      <p class="mt-2 text-gray-700 dark:text-gray-300" data-aos="fade-down">
+        Episodios
+      </p>
     </div>
     <div>
-      <p class="text-5xl font-bold text-violet-600">
+      <p class="text-5xl font-bold text-violet-600" data-aos="fade-down">
         {{ stats.ubicaciones }}
       </p>
-      <p class="mt-2 text-gray-700 dark:text-gray-300">Ubicaciones</p>
+      <p class="mt-2 text-gray-700 dark:text-gray-300" data-aos="fade-down">
+        Ubicaciones
+      </p>
     </div>
   </div>
 </section>
