--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -67,66 +67,41 @@
     </div>
     <div
       id="hs-navbar-example"
-      class="hidden hs-collapse overflow-hidden transition-all duration-300 basis-full grow sm:block"
+      class="hidden hs-collapse overflow-hidden transition-all duration-300 basis-full grow sm:block text-center"
       aria-labelledby="hs-navbar-example-collapse"
     >
       <div
         class="flex flex-col gap-5 mt-5 sm:flex-row sm:items-center sm:justify-end sm:mt-0 sm:ps-5"
       >
         <a
-          class="font-medium text-blue-400 hover:text-gray-400 focus:outline-hidden focus:text-blue-400 text-lg"
+          class="nav-link font-medium text-white hover:text-gray-400 text-lg"
           routerLink="/home"
-          routerLinkActive="text-blue-400"
+          routerLinkActive="text-[#7320E5]"
+          [routerLinkActiveOptions]="{ exact: true }"
         >
           Inicio
         </a>
 
         <a
-          class="font-medium text-white hover:text-gray-400 focus:outline-hidden focus:text-gray-400 text-lg"
+          class="nav-link font-medium text-white hover:text-gray-400 text-lg"
           routerLink="/personajes"
-          routerLinkActive="text-blue-400"
         >
           Personajes
         </a>
 
         <a
-          class="font-medium text-white hover:text-gray-400 focus:outline-hidden focus:text-gray-400 text-lg"
+          class="nav-link font-medium text-white hover:text-gray-400 text-lg"
           routerLink="/episodios"
-          routerLinkActive="text-blue-400"
         >
           Episodios
         </a>
 
         <a
-          class="font-medium text-white hover:text-gray-400 focus:outline-hidden focus:text-gray-400 text-lg"
+          class="nav-link font-medium text-white hover:text-gray-400 text-lg"
           routerLink="/lugares"
-          routerLinkActive="text-blue-400"
         >
           Lugares
         </a>
-
-        <!-- Input de búsqueda -->
-        <div class="relative">
-          <input
-            type="text"
-            placeholder="Buscar..."
-            class="px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-1 focus:ring-white-500 text-white"
-          />
-          <svg
-            class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 dark:text-neutral-400 w-5 h-5"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M21 21l-4.35-4.35M17 11a6 6 0 11-12 0 6 6 0 0112 0z"
-            />
-          </svg>
-        </div>
       </div>
     </div>
   </nav>
